[package]
name = "api-repeater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
tokio = { version = "1.12.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.27"
tracing-subscriber = "0.3.17"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.64"
console = "0.15.0"
